--- a/package.json
+++ b/package.json
@@ -40,13 +40,11 @@
     "nitrogen": "nitrogen",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "release": "release-it --only-version",
     "test": "jest"
   },
   "keywords": [
     "react-native",
-    "ios",
-    "android"
+    "inspector"
   ],
   "repository": {
     "type": "git",
@@ -67,7 +65,6 @@
     "@eslint/js": "^9.35.0",
     "@react-native/babel-preset": "0.81.1",
     "@react-native/eslint-config": "^0.81.1",
-    "@release-it/conventional-changelog": "^10.0.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.1.0",
     "del-cli": "^6.0.0",
@@ -76,12 +73,11 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "nitrogen": "^0.31.10",
-    "prettier": "^2.8.8",
+    "prettier": "^3.7.3",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-builder-bob": "^0.40.16",
     "react-native-nitro-modules": "^0.31.10",
-    "release-it": "^19.0.4",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2"
   },
@@ -126,25 +122,6 @@
     "trailingComma": "es5",
     "useTabs": false
   },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore: release ${version}",
-      "tagName": "v${version}"
-    },
-    "npm": {
-      "publish": true
-    },
-    "github": {
-      "release": true
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": {
-          "name": "angular"
-        }
-      }
-    }
-  },
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
@@ -153,11 +130,10 @@
     ]
   },
   "create-react-native-library": {
-    "languages": "kotlin-swift",
+    "languages": "c++",
     "type": "nitro-module",
     "tools": [
       "eslint",
-      "release-it",
       "jest"
     ],
     "version": "0.55.1"
